--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -1,7 +1,9 @@
 name: Ruby
 
-on: [push]
-
+on:
+  schedule:
+    - cron:  '*/15 * * * *'
+    
 jobs:
   build:
 
@@ -13,8 +15,6 @@ jobs:
       uses: actions/setup-ruby@v1
       with:
         ruby-version: 2.6.x
-    - name: Build and test with Rake
+    - name: run script
       run: |
-        gem install bundler
-        bundle install --jobs 4 --retry 3
-        bundle exec rake
+        ./aggregate-data
